# grpc-java

./: WORKSPACE  java_grpc_library.bzl
java/grpc/builddefstest/: AndroidManifest.xml  BUILD  Consumer.java  message.proto  message_and_service.proto  service.proto
some-other-package/: BUILD.bazel
some-other-package/test1/: A.proto  B.proto
some-other-package/test2/: C.proto
some-package/test1/: B.proto  BUILD.bazel  C.proto
some-package/test2/: BUILD.bazel  C.proto
testing-proto/: BUILD.bazel
testing-proto/src/main/proto/: Hello2.proto  Hello3.proto
